--- a/ansible-elk-playbook/roles/java/tasks/main.yml
+++ b/ansible-elk-playbook/roles/java/tasks/main.yml
@@ -6,3 +6,11 @@
    name: openjdk-8-jre-headless
    state: present
    update_cache: yes
+
+# Install apt-transport-https
+
+- name: Install apt transport
+  apt:
+   name: apt-transport-https
+   state: present
+   update_cache: yes
